<resources>
    <string name="app_name">PraktikSesi5</string>
    <string name="username">Username</string>
    <string name="field_username">fill your username</string>
    <string name="pass_text">Using password text</string>
    <string name="pass_number">Using password number</string>
    <string name="password">Password</string>
    <string name="fiedl_pass">fill your password</string>
    <string name="login">login</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="email">E-mail</string>
    <string name="notelp">No. Telp</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="wanita">Wanita</string>
    <string name="process_btn">process</string>
</resources>
